# crewai-weather-mcp-agent

./: README.md  pyproject.toml
src/my_ai_agent/: crew.py  main.py
src/my_ai_agent/config/: agents.yaml  tasks.yaml
