[project]
name = "my_ai_agent"
version = "0.1.0"
description = "my_ai_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=0.47.1",
    "crewai[tools]>=0.130.0,<1.0.0",
    "mcp>=1.9.4",
]

[project.scripts]
my_ai_agent = "my_ai_agent.main:run"
run_crew = "my_ai_agent.main:run"
train = "my_ai_agent.main:train"
replay = "my_ai_agent.main:replay"
test = "my_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
